# compiler-design-ocaml

./: .gitignore  README.md
as0/: as0.opam  dune-project
as0/lib/: dune  task1.ml  task1.mli  task2.ml  task2.mli
as1/: as1.opam  dune-project
as1/lib/: dune  errormsg.ml  errormsg.mli  funlex.mll  tokens.ml  tokens.mli
as2/: as2.opam  dune-project
as2/lib/: absyn.ml  dune  errormsg.ml  errormsg.mli  eval.ml  eval.mli  funlex.ml  funpar.mly  heap.ml  heap.mli  printer.ml  printer.mli  symbol.ml
as3/: as3.opam  dune-project
as3/data/: all.fun  test.fun
as3/lib/: absyn.ml  dune  errormsg.ml  errormsg.mli  funpar.ml  funpar.mli  symbol.ml  typecheck.ml  typecheck.mli
