(lang dune 3.14)

(name as1)

(generate_opam_files true)

(authors "Seonyeong Heo")

(maintainers "Seonyeong Heo")

(package
 (name as1)
 (synopsis "Assignment 1")
 (description "Lexical Analysis")
 (depends ocaml ocamllex dune)
 (tags ("compiler")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
