(lang dune 3.14)

(name as2)

(generate_opam_files true)

(authors "Seonyeong Heo")

(maintainers "Seonyeong Heo")

(package
 (name as2)
 (synopsis "Assignment 2")
 (description "Syntax Analysis")
 (depends ocaml dune)
 (tags ("compiler")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
