(lang dune 3.14)

(name as3)

(generate_opam_files true)

(authors "Seonyeong Heo")

(maintainers "Seonyeong Heo")

(package
 (name as3)
 (synopsis "Assignment 3")
 (description "Semantic Analysis")
 (depends ocaml dune)
 (tags ("compiler")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
